[gd_scene load_steps=19 format=3 uid="uid://bxrcqefybf0mx"]

[ext_resource type="Script" path="res://Scripts/cloud.gd" id="1_ivh7q"]

[sub_resource type="Curve" id="Curve_605xl"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.716763, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_e2uu3"]
curve = SubResource("Curve_605xl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2yijd"]
emission_shape = 6
emission_ring_axis = Vector3(0, 90, 1)
emission_ring_height = 1.0
emission_ring_radius = 300.0
emission_ring_inner_radius = 0.0
scale_min = 0.65
scale_max = 3.6
scale_curve = SubResource("CurveTexture_e2uu3")

[sub_resource type="Gradient" id="Gradient_1eat8"]
colors = PackedColorArray(0.150753, 0.385058, 1, 1, 0, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8btou"]
gradient = SubResource("Gradient_1eat8")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jis4b"]
transparency = 1
shading_mode = 2
diffuse_mode = 3
specular_mode = 2
albedo_texture = SubResource("GradientTexture2D_8btou")
billboard_mode = 2
billboard_keep_scale = true
distance_fade_max_distance = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_auts7"]
material = SubResource("StandardMaterial3D_jis4b")
flip_faces = true
size = Vector2(0.5, 3)

[sub_resource type="Curve" id="Curve_f10ub"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 360), 0.0, 0.0, 0, 0, Vector2(0.537572, 356.664), -28.854, -28.854, 0, 0, Vector2(1, 360), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_0em5d"]
curve = SubResource("Curve_f10ub")

[sub_resource type="Curve" id="Curve_h25np"]
_data = [Vector2(0, 0.0039202), 0.0, 0.0, 0, 0, Vector2(0.0963391, 0.777619), 2.11595, 2.11595, 0, 0, Vector2(0.485549, 0.930506), 0.0, 0.0, 0, 0, Vector2(0.990366, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_vr3ou"]
curve = SubResource("Curve_h25np")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bldma"]
lifetime_randomness = 1.0
emission_shape = 6
emission_ring_axis = Vector3(0, 90, 0)
emission_ring_height = 5.0
emission_ring_radius = 300.0
emission_ring_inner_radius = 0.0
angle_min = -264.5
angle_max = 183.9
angle_curve = SubResource("CurveTexture_0em5d")
inherit_velocity_ratio = 0.344
direction = Vector3(3.91, 0, 3.275)
spread = 180.0
flatness = 0.039
initial_velocity_min = 35.01
initial_velocity_max = 163.28
angular_velocity_min = -49.77
angular_velocity_max = 71.55
gravity = Vector3(0, 0, 0)
linear_accel_max = 1.45
scale_min = 20.0
scale_max = 300.0
scale_curve = SubResource("CurveTexture_vr3ou")
turbulence_enabled = true
turbulence_noise_strength = 0.01
turbulence_noise_scale = 1.969
turbulence_noise_speed_random = 4.0
sub_emitter_mode = 1
sub_emitter_frequency = 34.83

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4nry8"]
transparency = 3
alpha_hash_scale = 2.0
alpha_antialiasing_mode = 0
shading_mode = 2
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0.92549, 0.921569, 1, 0.352941)
emission = Color(0.407843, 0.32549, 1, 1)
emission_energy_multiplier = 0.0
subsurf_scatter_enabled = true
subsurf_scatter_strength = 0.64
distance_fade_mode = 2
distance_fade_min_distance = 17.25
distance_fade_max_distance = 129.05

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s8p3b"]
material = SubResource("StandardMaterial3D_4nry8")
radius = 0.222
height = 0.444
radial_segments = 4
rings = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h80m3"]
lifetime_randomness = 0.6
angle_min = -264.5
angle_max = 183.9
angle_curve = SubResource("CurveTexture_0em5d")
inherit_velocity_ratio = 0.344
direction = Vector3(3.91, 0, 3.275)
spread = 180.0
flatness = 0.039
initial_velocity_min = 35.01
initial_velocity_max = 163.28
angular_velocity_min = -49.77
angular_velocity_max = 71.55
gravity = Vector3(0, 0.085, 0)
linear_accel_max = 1.45
attractor_interaction_enabled = false
scale_min = 20.0
scale_max = 300.0
scale_curve = SubResource("CurveTexture_vr3ou")
turbulence_enabled = true
turbulence_noise_strength = 0.01
turbulence_noise_scale = 1.969

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wmad1"]
height = 652.954
radius = 59.8514

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ailfq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("DropEmitter:emitting")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CloudEmitter:emitting")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Shadow:transparency")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Cloud" type="Node3D"]
script = ExtResource("1_ivh7q")

[node name="DropEmitter" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 126.869, 0)
extra_cull_margin = 1500.0
visibility_range_end = 3000.0
visibility_range_end_margin = 500.0
visibility_range_fade_mode = 1
amount = 20000
lifetime = 10.0
speed_scale = 5.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_2yijd")
draw_pass_1 = SubResource("QuadMesh_auts7")

[node name="CloudEmitter" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.86729, 126.869, -1.37439)
extra_cull_margin = 1500.0
visibility_range_end = 3000.0
visibility_range_end_margin = 1000.0
visibility_range_fade_mode = 1
amount = 1490
sub_emitter = NodePath("../CloudEmitter2")
lifetime = 14.48
speed_scale = 0.5
randomness = 1.0
fixed_fps = 244
process_material = SubResource("ParticleProcessMaterial_bldma")
draw_pass_1 = SubResource("CapsuleMesh_s8p3b")

[node name="CloudEmitter2" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.86729, 126.869, -1.37439)
extra_cull_margin = 1500.0
visibility_range_end = 3000.0
visibility_range_end_margin = 1000.0
visibility_range_fade_mode = 1
emitting = false
amount = 300
lifetime = 6.63
speed_scale = 0.5
randomness = 1.0
fixed_fps = 244
visibility_aabb = AABB(-297.552, -23.2455, -302.105, 590.697, 48.911, 599.604)
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_h80m3")
draw_pass_1 = SubResource("CapsuleMesh_s8p3b")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 131.604, 0)
collision_layer = 512
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -324.946, 0)
shape = SubResource("CylinderShape3D_wmad1")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ailfq")

[node name="UpdateTimer" type="Timer" parent="."]

[node name="RepositionTimer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
[connection signal="timeout" from="RepositionTimer" to="." method="_on_reposition_timer_timeout"]
